Added treeview CSS and updated Jinja template

--- a/static/templated-hielo/assets/css/main.css
+++ b/static/templated-hielo/assets/css/main.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url(font-awesome.min.css);
+@import url(treeview.css);
 @import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700");
 
 /*
